<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/battery"
    style="@style/index_item"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/indextitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="@string/battery" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/line" />

    <RelativeLayout
        style="@style/index_item_children"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:text="@string/batterynum" />
        <!--电池容量-->
        <TextView
            android:id="@+id/tvBatteryNum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="85dp"
            android:gravity="right"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="30dp"
        android:background="@color/line" />

    <RelativeLayout
        style="@style/index_item_children"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:text="@string/batterytemp" />
        <!--电池温度-->
        <TextView
            android:id="@+id/tvBatteryTemp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="85dp"
            android:gravity="right"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="30dp"
        android:background="@color/line" />

    <RelativeLayout
        style="@style/index_item_children"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:text="@string/batterytype" />

        <TextView
            android:id="@+id/tvBatteryType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="85dp"
            android:gravity="right"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="30dp"
        android:background="@color/line" />







</LinearLayout>