<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/storage"
    style="@style/index_item"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/indextitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="@string/storage" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/line" />

    <RelativeLayout
        style="@style/index_item_children"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:text="@string/storageRAM" />
        <!--RAM-->
        <TextView
            android:id="@+id/tvStorageRAM"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="85dp"
            android:gravity="right"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="30dp"
        android:background="@color/line" />

    <RelativeLayout
        style="@style/index_item_children"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:text="@string/storageROM" />
        <!--ROM-->
        <TextView
            android:id="@+id/tvStorageROM"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="85dp"
            android:gravity="right"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="30dp"
        android:background="@color/line" />

    <RelativeLayout
        style="@style/index_item_children"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:text="@string/storagesd" />
        <!--SD-->
        <TextView
            android:id="@+id/tvStorageSD"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="85dp"
            android:gravity="right"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="30dp"
        android:background="@color/line" />

</LinearLayout>